--- a/docs/install.qmd
+++ b/docs/install.qmd
@@ -45,24 +45,24 @@ https://github.com/conda-forge/miniforge){target="_blank"}
     to find it. Run: ``python -m gistim configure``
 
 ## 3. Install the QGIS plugin
-
-Install the QGIS plugin now. 
-
-### From the plugin database 
-
---Explanation how to install from the plugin database comes here here when we
-released version >4.1 on the plugin database--
-
-### From Zip
-The qgistim.zip should not be unzipped
-manually, QGIS will do so.
-
+ 
+### Method 1: From the GQIS plugin database 
+**NB** Due to ongoing developments new features and bug fixes might not be part of this release. Consider installation method 2.
 1.  Open QGIS.
-2.  At the top, find the Plugins menu (\~sixth object in the menubar).
-3.  Find \"Manage and Install plugins\" (first object in drop-down).
-4.  Find \"Install from ZIP\" (Sixth in list).
-5.  Enter the path to the qgistim.zip file.
-6.  Click \"Install Plugin\".
+3.  At the top, find the Plugins menu (\~sixth object in the menubar).
+4.  Find \"Manage and Install plugins\" (first object in drop-down).
+5.  Find \"All\" (First in list).
+6.  Search for ``Qgis-Tim``.
+7.  Click \"Install Plugin\".
+
+### method 2: From Zip (prefered) 
+1.  Download the QGIS-TIM-plugin.zip (do not unzip!) from the [iMOD-Suite download portal.](https://deltares.thegood.cloud/s/AefTz97ZHbWS4RT){target="_blank"}
+2.  Open QGIS.
+3.  At the top, find the Plugins menu (\~sixth object in the menubar).
+4.  Find \"Manage and Install plugins\" (first object in drop-down).
+5.  Find \"Install from ZIP\" (Sixth in list).
+6.  Enter the path to the qgistim.zip file.
+7.  Click \"Install Plugin\".
 
 This will add an icon to the toolbar(s). By clicking the icon, the plugin is
 started. The QGIS plugin will automatically start and external interpreter when
