--- a/docs/install.qmd
+++ b/docs/install.qmd
@@ -18,7 +18,7 @@ packages incompatible with the packages in QGIS' own Python environment. There
 are two approaches: either using the fully-fletched Deltaforge distribution
 (Recommended) or the leaner Miniforge distribution.
 
-### Method 1: with Deltaforge (Recommended)
+### Method 1: with Deltaforge (recommended)
 
 [Download and install Deltaforge](
 https://download2.deltares.nl/imod-suite/){target="_blank"}. 
@@ -37,10 +37,9 @@ https://github.com/conda-forge/miniforge){target="_blank"}
 
 1.  Open the miniforge prompt (search in Windows Start for \"Miniforge
     Prompt\").
-2.  Create a new conda environment, run: conda create \--name tim
-    python=3.9
-3.  Activate the environment: conda activate tim
-4.  Run: conda install -c conda-forge gistim
+2.  Create a new conda environment, run: ``conda create \--name tim python=3.9``
+3.  Activate the environment: ``conda activate tim``
+4.  Run: ``conda install -c conda-forge gistim``
 6.  Configure the gistim installation, so that the QGIS plugin is able
     to find it. Run: ``python -m gistim configure``
 
@@ -57,7 +56,7 @@ https://github.com/conda-forge/miniforge){target="_blank"}
 6.  Search for \"Qgis-Tim\".
 7.  Click \"Install Plugin\".
 
-### Method 2: From Zip (prefered) 
+### Method 2: From Zip (recommended) 
 1.  Download the \"QGIS-TIM-plugin.zip\" (do not unzip!) from the [iMOD-Suite download portal.](https://deltares.thegood.cloud/s/AefTz97ZHbWS4RT){target="_blank"}
 2.  Open QGIS.
 3.  At the top, find the Plugins menu (\~sixth object in the menubar).
@@ -66,6 +65,6 @@ https://github.com/conda-forge/miniforge){target="_blank"}
 6.  Enter the path to the file \"QGIS-TIM-plugin.zip\".
 7.  Click \"Install Plugin\".
 
-This will add an icon to the toolbar(s). By clicking the icon, the plugin is
-started. The QGIS plugin will automatically start and external interpreter when
-it is required.
+This will add an icon to the toolbar(s). ![](figures/tutorial/button-Qgis-tim.png){width=6%}
+By clicking the icon, the plugin is started. <br> 
+The QGIS plugin automatically starts an extra window for the background calculation of a TIM model. This black window is called *Python.exe* and can be minimized or even closed after the calculation. 
